cluster/apps/paperless/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  annotations:
    keel.sh/policy: minor
    keel.sh/approvals: "1"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: '@every 1h'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      volumes:
        - name: paperless-documents
          persistentVolumeClaim:
            claimName: paperless-documents
        - name: paperless-scanner
          persistentVolumeClaim:
            claimName: paperless-scanner
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
      containers:
        - name: paperless
          image: jonaswinkler/paperless-ng:1.5.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /usr/src/paperless/media
              name: paperless-documents
            - mountPath: /usr/src/paperless/consume
              name: paperless-scanner
            - mountPath: /usr/src/paperless/data
              name: paperless-data
        # - name: test
        #   image: ubuntu:latest
        #   resources:
        #     requests:
        #       cpu: 100m
        #       memory: 128Mi
        #   command: [ "/bin/bash", "-c", "--" ]
        #   args: [ "while true; do sleep 30; done;" ]
        #   volumeMounts:
        #     - mountPath: /media
        #       name: paperless-documents
        #     - mountPath: /consume
        #       name: paperless-scanner
        #     - mountPath: /data
        #       name: paperless-data
