cluster/apps/paperless/paperless/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: paperless
  namespace: paperless
spec:
  type: NodePort
  selector:
    app: paperless
  ports:
    - port: 80
      targetPort: 8000
      name: ui-port
