cluster/apps/paperless/paperless/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: paperless
    namespace: paperless
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
    labels:
        app.kubernetes.io/instance: paperless
        app.kubernetes.io/name: paperless
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:lYAt+GSyx7AANYfLuDRceOoQKUY+mAGCKAF3gUUjjNg=,iv:8L1U1wKlMrePYk46zw0IsECiEfJT9fAKAqHTyEz9Qms=,tag:Xv4DY3sGQZN+f9HzM0nzfQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: paperless
                        port:
                            number: 80
    tls:
        - hosts:
            - ENC[AES256_GCM,data:xgwao0KsniIm2sNK5B4zX+VVbQc5vDgWiKNyxuqe8SU=,iv:Y+SCUEzxEu+tccwrI8b8+BOIR0QqS6w87svfNecrUgc=,tag:p4PbQ/2a5UBhsgIN65N1eQ==,type:str]
          secretName: paperless-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-11-01T02:54:22Z"
    mac: ENC[AES256_GCM,data:YcAwxTNVbB56JrL6Ca3qCJIwyF76FoFJRffhsAkNhGNctscea9exW5LFwCGZFBywKUnOWB64WwTxTnBk73m0Xqxb6ObHfb79anEdi/8mD7OUIMYFeMIhMkojD4SqMXQrilWFIjIqOgKZkuOyxaKsRlZOXoJEWrNxCCcZc41KVQI=,iv:PpqiFjaUkffAKCBYejKbko0y1O0331MEC+4ZTIx9hBI=,tag:kh+d2SyZTC6YRp8H603NXA==,type:str]
    pgp:
        - created_at: "2021-10-31T13:54:14Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkAQ//d2SReKqZ7PMJmxZWOzgu22NiXTAr9bCAJKqa5xAnryqz
[...]
            =fECu
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP|image)$
    version: 3.7.1
